--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
     "@types/react": "^17.0.37",
     "antd": "^4.17.3",
     "ol": "^6.9.0",
-    "react": "^17.0.2"
+    "react": "^17.0.0"
   },
   "dependencies": {
-    "@ag-grid-community/client-side-row-model": "^23.2.1",
-    "@ag-grid-community/core": "^23.2.1",
-    "@ag-grid-community/react": "^23.2.1",
-    "@ant-design/icons": "^4.2.1",
+    "@ag-grid-community/client-side-row-model": "^26.2.0",
+    "@ag-grid-community/core": "^26.2.0",
+    "@ag-grid-community/react": "^26.2.0",
+    "@ant-design/icons": "^4.7.0",
     "@terrestris/base-util": "^1.0.0",
     "@terrestris/ol-util": "^5.0.0",
     "@types/geojson": "^7946.0.7",
@@ -93,10 +93,10 @@
     "moment": "^2.24.0",
     "proj4": "^2.6.0",
     "prop-types": "^15.7.2",
-    "react-dom": "^16.12.0",
-    "react-fa": "^5.0.0",
+    "react-dom": "^17.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "react-rnd": "^10.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "4.4.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
@@ -120,7 +120,7 @@
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/eslint-plugin-tslint": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
-    "antd": "^4.15.1",
+    "antd": "^4.17.3",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.2.1",
     "babel-loader": "^8.0.6",
@@ -131,7 +131,7 @@
     "coveralls": "^3.0.9",
     "css-loader": "^5.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "eslint": "^7.2.0",
     "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-markdown": "^1.0.0",
@@ -146,8 +146,8 @@
     "jest-fetch-mock": "^3.0.3",
     "less-loader": "^6.1.1",
     "np": "^7.0.0",
-    "ol": "^6.6.1",
-    "react": "^16.12.0",
+    "ol": "^6.9.0",
+    "react": "^17.0.0",
     "react-docgen-typescript": "^1.17.1",
     "react-styleguidist": "^11.0.8",
     "rimraf": "^3.0.2",
