--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "@types/react": "^17.0.37",
     "antd": "^4.17.3",
     "ol": "^6.9.0",
-    "react": "^17.0.0"
+    "react": "^17.0.2"
   },
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^26.2.0",
@@ -87,16 +87,17 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^15.0.0",
     "@types/react": "^16.9.38",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^17.0.2",
     "@types/react-rnd": "^8.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "proj4": "^2.6.0",
     "prop-types": "^15.7.2",
-    "react-dom": "^17.0.0",
+    "react-dom": "^17.0.2",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "react-rnd": "^10.2.1",
-    "typescript": "4.4.4"
+    "typescript": "4.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
@@ -147,9 +148,9 @@
     "less-loader": "^6.1.1",
     "np": "^7.0.0",
     "ol": "^6.9.0",
-    "react": "^17.0.0",
+    "react": "^17.0.2",
     "react-docgen-typescript": "^1.17.1",
-    "react-styleguidist": "^11.0.8",
+    "react-styleguidist": "^11.1.7",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.4.3",
     "style-loader": "^2.0.0",
